<resources>
    <string name="app_name">学树</string>
    <string name="no_pass">不通过</string>
    <string name="secrecy">保密</string>
    <string name="bind_success">绑定成功</string>
    <string name="bind_account">绑定账户</string>
    <string name="boil_yourself">把自己熬成金黄</string>
    <string name="bind_ali_pay_account">绑定支付宝账户</string>
    <string name="plant_tree_long_text">不同背景颜色，不同外形，每一棵树都独一无二</string>
    <string name="look_over">查看</string>
    <string name="top_up">充值</string>
    <string name="habit_create">习惯创建</string>
    <string name="create_time">创建时间：</string>
    <string name="top_up_time">充值时间：</string>
    <string name="resend">重新发送</string>
    <string name="top_up_success">充值成功</string>
    <string name="create_success">创建成功</string>
    <string name="view_images">[查看图片]</string>
    <string name="top_up_num">充值金额</string>
    <string name="view_details">查看详情</string>
    <string name="search_friends">查找好友</string>
    <string name="retry_punch_card">重新打卡</string>
    <string name="resend_time">重新发送（%d秒）</string>
    <string name="repeat_day_count">重复天数</string>
    <string name="time_of_duration">持续时间</string>
    <string name="error_phone_number">错误的手机号</string>
    <string name="choose_from_gallery">从相册选择</string>
    <string name="the_growing_up_habits">成长中的习惯：%d</string>
    <string name="create_your_first_habit">创建您的第一个习惯</string>
    <string name="begin_with_a_little_habit">从一个小习惯开始</string>
    <string name="login">登录</string>
    <string name="dian_zan">点赞</string>
    <string name="punch_card">打卡</string>
    <string name="single_amount">单次金额：</string>
    <string name="frozen_money">冻结金额</string>
    <string name="audit_record">打卡审核</string>
    <string name="punch_card_record">打卡记录</string>
    <string name="login_success">登录成功</string>
    <string name="pending_matters">待处理事项</string>
    <string name="times_of_punch_card">打卡数</string>
    <string name="click_to_punch_card">点击打卡</string>
    <string name="punch_card_accept">打卡通过</string>
    <string name="punch_card_refused">打卡不通过</string>
    <string name="punch_card_no_pass">打卡未通过</string>
    <string name="click_tree_to_watch_detail">点击小树查看习惯</string>
    <string name="login_overdue">登录过期，请重新登录</string>
    <string name="send">发送</string>
    <string name="forfeit">罚金</string>
    <string name="returns_amount">返回金额：</string>
    <string name="share_success">分享成功</string>
    <string name="share_habit">分享习惯</string>
    <string name="send_success">发送成功</string>
    <string name="send_message">发消息</string>
    <string name="abandon_habit">放弃习惯</string>
    <string name="penalty_settings">罚金设置</string>
    <string name="send_auth_code">发送验证码</string>
    <string name="send_card_record">发送打卡记录</string>
    <string name="public_to_everyone">公开</string>
    <string name="about_app">关于学树</string>
    <string name="personal_info">个人资料</string>
    <string name="tell_him_why_refused">告诉TA不通过的理由吧</string>
    <string name="change_yourself_begin_with_little_habit">改变自己，从一个小习惯开始</string>
    <string name="forfeit_setting_long_text">共收取%d次罚金作为押金，当全部罚金扣除后，本次培养即告停止。</string>
    <string name="phone_already_register">该手机号已经被注册</string>
    <string name="friend">好友</string>
    <string name="be_friend_request">好友请求</string>
    <string name="summation_money">合计 ¥ %s</string>
    <string name="friend_list">好友列表</string>
    <string name="register_tip">还没帐号？点击</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="accept">接受</string>
    <string name="refuse">拒绝</string>
    <string name="supervision">监督</string>
    <string name="ongoing">进行中</string>
    <string name="supervisor">监督人</string>
    <string name="it_is_you">就是你了</string>
    <string name="to_audit">进行审核</string>
    <string name="basic_setting">基本设置</string>
    <string name="recording_mode">记录方式</string>
    <string name="record_setting">记录设置</string>
    <string name="transaction_detail">交易详情</string>
    <string name="transaction_record">交易记录</string>
    <string name="days_of_accession">加入天数</string>
    <string name="join_num_days">加入天数：%d天</string>
    <string name="supervision_setting">监督设置</string>
    <string name="supervision_say">监督人留言：%s</string>
    <string name="only_you_can_see">仅自己和监督人可见</string>
    <string name="today_has_been_punch_card_no_check">今天已打卡（待审核）</string>
    <string name="today_has_been_punch_card_and_checked">今天已打卡（已审核）</string>
    <string name="qzone">空间</string>
    <string name="quick_login">快速登录</string>
    <string name="quick_register">快速注册</string>
    <string name="can_use_sum">可用余额：</string>
    <string name="to_invite_supervision">快去邀请监督人，见证你的成长</string>
    <string name="type">类型：</string>
    <string name="serial_number">流水号：</string>
    <string name="pay_right_now">立即支付</string>
    <string name="different_password">两次输入的密码不一致</string>
    <string name="continuous_of_punch_card">连续签到次数</string>
    <string name="password">密码</string>
    <string name="start_it_right_now">马上开始</string>
    <string name="password_must_not_be_empty">密码不能为空</string>
    <string name="describe_can_not_be_empty">描述内容不能为空</string>
    <string name="find_password_success">密码已修改，请使用新密码登录</string>
    <string name="describe_what_habit_that_you_want_to_foster">描述你想要培养的习惯</string>
    <string name="every_time_do_not_punch_card_will_deduct_money">*每次打卡缺勤将扣除一次罚金</string>
    <string name="password_length_hint">密码最少6位</string>
    <string name="login_by_password">密码登录</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="nickname">昵称</string>
    <string name="between_you">你们之间</string>
    <string name="you_havent_added_tixian_account">您还未添加提现账户</string>
    <string name="you_become_his_supervision">你作为TA的监督人</string>
    <string name="you_has_no_choose_supervision">您尚未选择监督人，若不选择，系统将默认官方助手作为您的监督人</string>
    <string name="your_tree_will_turn_gray">您的小树将永远变成灰色，剩余罚金也将会全部支付给你的监督人</string>
    <string name="take_photo">拍照</string>
    <string name="friends_circle">朋友圈</string>
    <string name="foster_state">培养状态</string>
    <string name="QQ">QQ</string>
    <string name="all">全部</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="to_pay">去支付</string>
    <string name="please_wait">请稍后</string>
    <string name="rate_of_punch_card">签到率</string>
    <string name="qq_friends">QQ好友</string>
    <string name="other_sum">其他金额</string>
    <string name="clear_cache">清除缓存</string>
    <string name="all_withdrawal">全部提现</string>
    <string name="wallet_balance">钱包余额</string>
    <string name="sure_logout">确定退出？</string>
    <string name="sure_clear_cache">确定清除缓存？</string>
    <string name="confirm_password">确认密码</string>
    <string name="rewards_for_all_the_work">全勤奖鼓励</string>
    <string name="please_enter_password">请输入登录密码</string>
    <string name="sure_abandon_habit">确认放弃习惯？</string>
    <string name="sure_upload">确认上传？</string>
    <string name="sure_to_quit_this_edit">确定要退出此次打卡编辑吗？</string>
    <string name="please_choose_at_least_one">请至少选择一天</string>
    <string name="please_choose_recycle_days">请选择天数</string>
    <string name="please_enter_phone_number">请输入手机号</string>
    <string name="please_enter_password_again">请再次输入密码</string>
    <string name="please_set_remind_time">请设置提醒时间</string>
    <string name="please_set_repeat_days">请设置重复天数</string>
    <string name="please_set_recycle_days">请设置持续时间</string>
    <string name="please_choose_price">请选择罚金数</string>
    <string name="please_choose_pay_way">请选择支付方式</string>
    <string name="please_choose_privacy_setting">请选择隐私设置</string>
    <string name="please_choose_record_setting">请选择记录设置</string>
    <string name="please_enter_your_ali_pay_account">请输入支付宝账号</string>
    <string name="please_enter_your_ali_pay_name">请输入支付宝姓名</string>
    <string name="please_upload_one_photo_at_least">请至少上传一张照片</string>
    <string name="please_enter_habit_describe">请填写至少两个字的习惯描述</string>
    <string name="please_accept_the_permission_of_camera">请打开照相权限及存储权限</string>
    <string name="please_set_password_from_eight_to_sixteen">请设置8&#8211;16位密码，可包含数字、字母、字符</string>
    <string name="delete">删除</string>
    <string name="birthday">生日</string>
    <string name="setting">设置</string>
    <string name="income_num">收入：¥ %s</string>
    <string name="expense_num">支出：¥ %s</string>
    <string name="phone_number">手机号</string>
    <string name="telephone">手机</string>
    <string name="log_out">退出登录</string>
    <string name="set_password">设置密码</string>
    <string name="payment_record">罚金收支记录</string>
    <string name="note_auth_code">短信验证码</string>
    <string name="phone_auth_code">手机验证码</string>
    <string name="sd_card_can_not_use">SD卡不可用，无法进行拍照</string>
    <string name="phone_number_must_be_not_empty">手机号不能为空</string>
    <string name="is_must_upload_photos_as_record">是否必须上传照片作为打卡记录</string>
    <string name="is_allow_other_people_see_this_habit">是否允许你的监督人之外的亲友看到这条习惯</string>
    <string name="pass">通过</string>
    <string name="head">头像</string>
    <string name="remind">提示</string>
    <string name="statistics">统计</string>
    <string name="withdraw_deposit">提现</string>
    <string name="withdraw_time">提现时间：</string>
    <string name="withdraw_sum">提现金额</string>
    <string name="reminder_time">提醒时间</string>
    <string name="add_friends">添加好友</string>
    <string name="his_forest">TA的森林</string>
    <string name="he_become_your_friend">TA成为你的好友</string>
    <string name="he_become_your_supervision">TA成为你的监督人</string>
    <string name="wx_pay_long_text">推荐已安装微信的用户使用</string>
    <string name="ali_pay_long_text">推荐已安装支付宝的用户使用</string>
    <string name="withdraw_request_success">提交提现申请成功</string>
    <string name="sex">性别</string>
    <string name="habit">习惯</string>
    <string name="xue_shu">学·树</string>
    <string name="detail">详情</string>
    <string name="message">消息</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="next_step">下一步</string>
    <string name="habit_name">习惯名称</string>
    <string name="habit_pay">习惯支付：</string>
    <string name="habit_days">习惯天数：</string>
    <string name="habit_cycle">习惯周期：</string>
    <string name="habit_name_mao">习惯名称：</string>
    <string name="habit_invite">习惯邀请</string>
    <string name="habit_detail">习惯详情</string>
    <string name="habit_setting">习惯设置</string>
    <string name="habit_balance">习惯金额</string>
    <string name="change_password">修改密码</string>
    <string name="change_success">修改成功</string>
    <string name="habit_description">习惯描述</string>
    <string name="choose_supervisor">选择监督人</string>
    <string name="choose_plant_trees">选择成长树</string>
    <string name="choose_withdraw_account">选择提现账户</string>
    <string name="change_phone_number">修改手机号码</string>
    <string name="new_phone_number">新手机号码</string>
    <string name="name_must_not_be_empty">姓名不能为空</string>
    <string name="habit_create_success">习惯创建成功</string>
    <string name="number_of_penalty_need_pay">需支付罚金</string>
    <string name="send_card_record_to_someone">向监督人（%s）发送打卡记录</string>
    <string name="choose_rational_time_is_helpful">选择合理的周期，有助于积累成就感和信息</string>
    <string name="sina_blog">微博</string>
    <string name="we_chat">微信</string>
    <string name="my_wallet">我的钱包</string>
    <string name="privacy_settings">隐私设置</string>
    <string name="already_send_code_to_your_phone">已经向您的手机发送验证码，请查收</string>
    <string name="status">状态：</string>
    <string name="spending">支出：</string>
    <string name="method_of_payment">支付方式：</string>
    <string name="photo_record">照片记录</string>
    <string name="account_balance">账户余额：</string>
    <string name="account_binding">账户绑定</string>
    <string name="twenty_four_un_processed">24小时未处理的打开记录将视为通过；24小时未处理的监督要求视为拒绝</string>
</resources>