<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.habitree.xueshu.punchcard.activity.HabitSettingActivity">

    <com.habitree.xueshu.xs.view.MyActionBar
        android:id="@+id/setting_mab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        app:right_btn_text="@string/next_step"
        app:title_text="@string/habit_setting" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:minHeight="@dimen/custom_item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/habit_description"
            android:textColor="@color/black_text"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/describe_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/white"
            android:hint="@string/describe_what_habit_that_you_want_to_foster"
            android:textSize="15sp"
            android:textColor="@color/black_text"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center_vertical"
        android:textColor="@color/black_text"
        android:textSize="14sp"
        android:text="@string/basic_setting"/>

    <com.habitree.xueshu.xs.view.CustomItemView
        android:id="@+id/remind_civ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_item_height"
        app:title="@string/reminder_time"
        app:next_visible="true"/>

    <com.habitree.xueshu.xs.view.CustomItemView
        android:id="@+id/repeat_civ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_item_height"
        app:title="@string/repeat_day_count"
        app:next_visible="true"/>

    <com.habitree.xueshu.xs.view.CustomItemView
        android:id="@+id/duration_civ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_item_height"
        app:title="@string/time_of_duration"
        app:next_visible="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center_vertical"
        android:textColor="@color/gray_text"
        android:textSize="14sp"
        android:text="@string/choose_rational_time_is_helpful"/>

    <com.habitree.xueshu.xs.view.CustomItemView
        android:id="@+id/privacy_civ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_item_height"
        app:title="@string/privacy_settings"
        app:next_visible="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center_vertical"
        android:textColor="@color/gray_text"
        android:textSize="14sp"
        android:text="@string/is_allow_other_people_see_this_habit"/>

    <com.habitree.xueshu.xs.view.CustomItemView
        android:id="@+id/record_civ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_item_height"
        app:title="@string/record_setting"
        app:next_visible="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center_vertical"
        android:textColor="@color/gray_text"
        android:textSize="14sp"
        android:text="@string/is_must_upload_photos_as_record"/>
</LinearLayout>
