<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/background"
    tools:context="com.habitree.xueshu.punchcard.activity.RepeatDayActivity">

    <com.habitree.xueshu.xs.view.CustomItemView
        android:id="@+id/monday_civ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_item_height"
        android:layout_marginTop="12dp"
        app:detail_visible="false"
        app:next_visible="false"
        app:head_img="@drawable/selector_day_check_box"
        app:title="@string/monday"/>

    <com.habitree.xueshu.xs.view.CustomItemView
        android:id="@+id/tuesday_civ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_item_height"
        app:detail_visible="false"
        app:next_visible="false"
        app:head_img="@drawable/selector_day_check_box"
        app:title="@string/tuesday"/>

    <com.habitree.xueshu.xs.view.CustomItemView
        android:id="@+id/wednesday_civ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_item_height"
        app:detail_visible="false"
        app:next_visible="false"
        app:head_img="@drawable/selector_day_check_box"
        app:title="@string/wednesday"/>

    <com.habitree.xueshu.xs.view.CustomItemView
        android:id="@+id/thursday_civ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_item_height"
        app:detail_visible="false"
        app:next_visible="false"
        app:head_img="@drawable/selector_day_check_box"
        app:title="@string/thursday"/>

    <com.habitree.xueshu.xs.view.CustomItemView
        android:id="@+id/friday_civ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_item_height"
        app:detail_visible="false"
        app:next_visible="false"
        app:head_img="@drawable/selector_day_check_box"
        app:title="@string/friday"/>

    <com.habitree.xueshu.xs.view.CustomItemView
        android:id="@+id/saturday_civ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_item_height"
        app:detail_visible="false"
        app:next_visible="false"
        app:head_img="@drawable/selector_day_check_box"
        app:title="@string/saturday"/>

    <com.habitree.xueshu.xs.view.CustomItemView
        android:id="@+id/sunday_civ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_item_height"
        app:detail_visible="false"
        app:next_visible="false"
        app:head_img="@drawable/selector_day_check_box"
        app:title="@string/sunday"/>
</LinearLayout>
