<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    tools:context="com.habitree.xueshu.mine.activity.AccountBindingActivity">

    <com.habitree.xueshu.xs.view.MyActionBar
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        app:title_text="@string/account_binding"/>

    <com.habitree.xueshu.xs.view.CustomItemView
        android:id="@+id/phone_civ"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        app:title="@string/phone_number"
        app:head_img="@drawable/ic_phone"
        app:next_visible="true"
        app:detail_text_color="@color/blue"
        android:visibility="gone"
        tools:visibility="visible"/>

    <com.habitree.xueshu.xs.view.CustomItemView
        android:id="@+id/wechat_civ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_item_height"
        android:layout_marginTop="20dp"
        app:detail_text_color="@color/blue"
        app:title="@string/we_chat"
        app:head_img="@drawable/ic_weixin_blue"
        app:next_visible="true"/>

    <com.habitree.xueshu.xs.view.CustomItemView
        android:id="@+id/weibo_civ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_item_height"
        app:detail_text_color="@color/blue"
        app:title="@string/sina_blog"
        app:head_img="@drawable/ic_weibo_blue"
        app:next_visible="true"/>

    <com.habitree.xueshu.xs.view.CustomItemView
        android:id="@+id/qq_civ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_item_height"
        app:detail_text_color="@color/blue"
        app:title="@string/QQ"
        app:head_img="@drawable/ic_qq_blue"
        app:next_visible="true"/>
</LinearLayout>
