<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.habitree.xueshu.punchcard.activity.SendRecordActivity">

    <com.habitree.xueshu.xs.view.MyActionBar
        android:id="@+id/send_mab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        app:right_btn_text="@string/send"
        app:title_text="@string/send_card_record" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/send_card_record_to_someone"
        android:textColor="@color/gray_text"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/detail_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="start"
        android:minHeight="140dp"
        android:padding="10dp"
        android:inputType="textMultiLine"
        android:text="@string/twenty_four_un_processed"
        android:textSize="15sp"
        android:textColor="@color/black_text"
        android:labelFor="@id/detail_et"/>

    <View style="@style/Line"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/photo_record"
        android:textColor="@color/gray_text"
        android:textSize="14sp" />

    <com.habitree.xueshu.xs.view.NoScrollRecyclerView
        android:id="@+id/photo_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"/>
</LinearLayout>
