<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.habitree.xueshu.login.activity.SendAuthCodeActivity">

    <com.habitree.xueshu.xs.view.MyActionBar
        android:id="@+id/send_mab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        app:right_btn_text="@string/confirm"
        app:title_text="@string/phone_auth_code" />

    <View style="@style/ShadowLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/code_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/please_enter_phone_number"
            android:inputType="number"
            android:maxLength="6"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/send_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/send_auth_code"
            android:textColor="@color/orange"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        style="@style/Line"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:background="@color/orange" />

    <TextView
        android:id="@+id/hint_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/already_send_code_to_your_phone"
        android:textColor="@color/gray_text"
        android:textSize="14sp"
        android:visibility="gone"
        tools:visibility="visible" />
</LinearLayout>
